# GLsat

./: index.html  params.json
GLsat/: .Credits.txt.swp  .constants.h.swp  .tle.cpp.swp  .tle.h.swp  gps-ops.txt
GLsat-Cocoa/other/: ORBIT.C  netscape3.ps  warning.txt
GLsat-Cocoa/other/SpaceTrack/: FMOD2P.FOR  SDP4.FOR  SDP8.FOR  SGP.FOR  SGP4.FOR  SPACETRK.AUX  SPACETRK.TOC
GLsat-Cocoa/other/gltZpr/: zpr.c  zpr.h
GLsat-Cocoa/other/jpot/: ConfigFile  INSTALL  java.tpl  javastatic.tpl
GLsat-Cocoa/other/norad-0.7/: 1_COPYING  2_README  Makefile  dpper.f  norad.h  sgp4.f
GLsat-Cocoa/other/predict/: CHANGES  CREDITS  HISTORY  clean  configure  installer.c  predict.c  uninstall
GLsat-Cocoa/other/sgp16src/: OBSERVER.CPP  Sgpsdp.cpp  Sgpsdp.dsw  Sgpsdp.h  Sgpsdp.mak  Sgpsdp.plg  VECTOR.H
GLsat-Cocoa/other/sgp4-plb26a/: INTRFACE.TXT  MINMAX.PAS  SGP4-PLB.DIR  SGP4-PLB.TXT  SGP4TST2.PAS  SGP_CONV.PAS  SGP_MATH.PAS
GLsat-Cocoa/other/xplanet-0.94/: FAQ  INSTALL  Location.h  Makefile  Makefile.in  Options.h  Planet.h  README  Ring.h  Satellite.cc  Satellite.h  config.status  configure  orbit.h  satrings.h  specularMap.cc  tzcoord.pl.in  util.h  xplanet.h  xplanetbg  xplanetbg.cc
GLsat-Cocoa/other/xplanet-0.94/libimage/: README  checkfuncs.h.in  configure.in  pnm.c
GLsat-Cocoa/src/: Credits.txt  Makefile  Scorecard.txt  TODO  lla.cpp  tle.cpp
GLsat-Cocoa/test/: mathTest.cpp
GLsat-Cocoa/tle/: noaa.txt
bld/vc2003/: GLsat.sln
bld/xcode/English.lproj/: InfoPlist.strings
bld/xcode/GLsat.cocoa.pbproj/: mcneight.pbxuser  (+1 more)
doc/: .Accuracy.txt.swp  .Scorecard.txt.swp  Accuracy.txt  nprm6_25_99.doc  symbols.ps
img/: land_ocean_ice_16.ppm  land_ocean_ice_64.ppm
lib/: GLsat.lib
src/: .Credits.txt.swp  .tle.cpp.swp  .tle.h.swp  Credits.txt  astro.cpp  astro.h  color.h  constants.h  graphics.cpp  graphics.h  image.cpp  image.h  info.txt  lla.cpp  main.cpp  sarsat3.tle  symbols.dvi  tle.cpp  tle.h
test/: mathTest.cpp~  test.c
tle/: 1999-025.txt  amateur.txt  goes.txt  iridium.txt  noaa.txt  noaa10.tle  sarsat.txt  stations.txt  tdrss.txt  weather.txt
trunk/GLsat/: allnoaa.tle  constants.h
trunk/GLsat-Cocoa/other/xplanet-0.94/libsgp4sdp4/: configure.in
trunk/doc/: User Documentation.rtf  sf.app.txt  symbols.dvi  symbols.tex
trunk/img/: land_ocean_ice_2.ppm  noaa-17.large.tga
trunk/src/: .Makefile.swp  .Scorecard.txt.swp  .constants.h.swp  .main.cpp.swp  astro.h  color.cpp  constants.h  eci.cpp  eci.h  graphics.cpp  graphics.h  image.cpp  image.h  lla.cpp  lla.h  main.cpp  orbit.cpp  tle.cpp
trunk/tle/: gps-ops.txt  usa-193-debris.txt  weather.txt
(+570 files in other folders)
