dnl Process this file with autoconf to produce a configure script.

dnl Are we in the right directory?  Check for the existence of read_image.c.
AC_INIT(image.c)

dnl Disable cache file
define([AC_CACHE_LOAD], )
define([AC_CACHE_SAVE], )

AC_CONFIG_AUX_DIR(../autoconf)

AC_PROG_CC

AC_PATH_PROG(AR, ar, ar)
ARFLAGS="rsuv"

AC_CANONICAL_HOST
case "$host" in
     sparc-sun-*) 
       if test "x$GXX" != "xyes"; then
dnl Assume Sun Workshop compiler
         AR="$(CXX) -xar"
         ARFLAGS="-o"
       fi
     ;;
     *-apple-darwin*)
       ARFLAGS="ruv"
       AC_PATH_PROG(RANLIB, ranlib, ranlib)
       RANLIB="$RANLIB \$@"
       AC_SUBST(RANLIB)
     ;;
     mips-sgi-irix*)
dnl this is for the MIPSpro compilers
       if test "x$GXX" != "xyes"; then
         AR="$(CXX) -ar"
         ARFLAGS="-WR,-s,-u,-v -o"
       fi
     ;;
     i686-pc-linux-gnu)
     ;;
esac

AC_SUBST(ARFLAGS)

OTHER_CPPFLAGS="-Wall -O3"
if test \! -z "$prefix" ; then 
  OTHER_CPPFLAGS="$OTHER_CPPFLAGS -I$prefix/include"
fi
if test \! -z "$includedir" ; then 
  OTHER_CPPFLAGS="$OTHER_CPPFLAGS -I$includedir"
fi

AC_SUBST(OTHER_CPPFLAGS)

AC_PATH_PROG(RM, rm, rm)
AC_CONFIG_HEADER(checkfuncs.h)

AC_FIND_GRAPHICS_LIBS

AC_OUTPUT(Makefile)
