dnl Process this file with autoconf to produce a configure script.

dnl libs are checked in LIBS
dnl headers are checked in CPPFLAGS

dnl Disable cache file
define([AC_CACHE_LOAD], )
define([AC_CACHE_SAVE], )

dnl Are we in the right directory?  Check for the existence of xplanet.cc.
AC_INIT(sgp4sdp4.c)
AC_CONFIG_AUX_DIR(../autoconf)

AC_PATH_PROG(RM, rm, rm)

dnl Checks for compilers.
AC_PROG_CC

AC_PATH_PROG(AR, ar, ar)
ARFLAGS="rsuv"

AC_CANONICAL_HOST
case "$host" in
     sparc-sun-*) 
       if test "x$GXX" != "xyes"; then
dnl Assume Sun Workshop compiler
         AR="$(CXX) -xar"
         ARFLAGS="-o"
       fi
     ;;
     *-apple-darwin*)
       ARFLAGS="ruv"
       AC_PATH_PROG(RANLIB, ranlib, ranlib)
       RANLIB="$RANLIB \$@"
       AC_SUBST(RANLIB)
     ;;
     mips-sgi-irix*)
dnl this is for the MIPSpro compilers
       if test "x$GXX" != "xyes"; then
         AR="$(CXX) -ar"
         ARFLAGS="-WR,-s,-u,-v -o"
       fi
     ;;
     i686-pc-linux-gnu)
     ;;
esac

AC_SUBST(ARFLAGS)
AC_SUBST(OTHER_CPPFLAGS)

AC_OUTPUT(Makefile)

echo "
Configuration complete!  Type \"make\" to build libsgp4sdp4 or \"make
ephem\" to build the example program
"
